# Desktop-Pets

./: CMakeLists.txt  README.md  meson.build  x86_64-w64-mingw32.txt
conf/: meson.build  petConfig.json  texConfig.json
inc/: PetEngine.hpp
include/: DesktopPetsApps.hpp  PetEngine.hpp  RNG.hpp  Timer.hpp  VectorStructs.hpp  configParser.hpp  desktopPetsHeaders.hpp
src/: Launcher.cpp  PetEngine.conf  PetEngine.cpp  RNG.cpp  Timer.cpp  configParser.cpp  main.cpp  meson.build
tex/: meson.build
